trying to fix overflow on mobile

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ p{
 }
 
 .app-container{
-    width: 90%;
+    width: 95%;
     max-width: 600px;
     border-radius: 10px;
     padding: 10px 12px;
